docs: reorganize changelog structure and add maintenance rules
- Reorganized CHANGELOG.md to use organized version files
- Added version 0.3.62 to changelogs/v0.3.x.md with complete food analysis fixes
- Created comprehensive changelog maintenance rules in .cursor/rules/16_changelog_maintenance.md
- Updated archive links in main CHANGELOG.md to reference organized files
- Maintained all existing changelog content in proper organized structure

Key improvements:
- Clear separation between current development ([Unreleased]) and archived versions
- Organized version files for better maintainability
- Comprehensive rules for future changelog maintenance
- Proper version range documentation in archive links

--- a/changelogs/v0.3.x.md
+++ b/changelogs/v0.3.x.md
@@ -1,5 +1,67 @@
 # Changelog - Version 0.3.x
 
+## [0.3.62] - 2025-07-27
+
+### Fixed
+- **Food Analysis Functionality**: Complete fix for nutrition analysis from photos
+  - **Import Path Issues**: Fixed `ModuleNotFoundError: No module named 'bot'` in `services/api/bot/handlers/nutrition.py`
+    - Corrected absolute import `from bot import dp` to relative path `from services.api.bot.bot import dp`
+  - **Import Path Issues**: Fixed `ModuleNotFoundError: No module named 'handlers'` in action callbacks
+    - Moved `from .nutrition import NutritionStates` import to top of `services/api/bot/handlers/commands.py`
+  - **Authentication Headers**: Fixed 401 "Invalid or missing internal API token" error in ML service communication
+    - Added `X-Internal-Token` headers to `process_nutrition_analysis` function in `services/api/bot/handlers/photo.py`
+    - Properly configured `multipart/form-data` Content-Type handling for photo uploads
+  - **OpenAI Regional Blocking**: Implemented comprehensive fallback mechanism for regional restrictions
+    - Added proxy support for OpenAI client with `HTTP_PROXY`/`HTTPS_PROXY` environment variables
+    - Implemented automatic fallback from OpenAI to Google Gemini API when OpenAI fails
+    - Added full Gemini Vision API integration in `services/ml/gemini/client.py`
+    - Handles specific OpenAI errors: "unsupported_country_region_territory" and connection failures
+  - **Docker Service Communication**: Fixed inter-service communication issues after Docker restart
+    - Resolved network connectivity between API and ML services
+    - Ensured proper service health checks and dependency management
+
+### Added
+- **Google Gemini Vision API Integration**: Complete alternative ML provider implementation
+  - **Full Gemini Client**: Implemented `analyze_food_with_gemini()` function in `services/ml/gemini/client.py`
+    - Base64 image encoding and proper API request formatting
+    - Multilingual prompt support (Russian/English) for food analysis
+    - JSON response parsing with error handling
+    - Comprehensive logging for debugging and monitoring
+  - **Fallback Mechanism**: Automatic provider switching in ML service
+    - Primary: OpenAI GPT-4o-mini for food analysis
+    - Fallback: Google Gemini 1.5 Flash when OpenAI fails
+    - Configurable via `GEMINI_API_KEY` environment variable
+    - Graceful error handling and user notification
+  - **Proxy Configuration**: Enhanced OpenAI client with proxy support
+    - Optional HTTP/HTTPS proxy configuration via environment variables
+    - Automatic proxy detection and client configuration
+    - Maintains backward compatibility when proxies not configured
+  - **Enhanced Error Handling**: Improved error messages and user experience
+    - Clear distinction between OpenAI and Gemini analysis results
+    - Proper error propagation and user feedback
+    - Comprehensive logging for debugging and monitoring
+
+### Changed
+- **ML Service Architecture**: Enhanced ML service with multi-provider support
+  - **Provider Selection**: Added provider parameter support in `/api/v1/analyze` endpoint
+    - Default: "openai" (existing behavior)
+    - Explicit: "gemini" for direct Gemini usage
+    - Automatic: Fallback to Gemini when OpenAI fails
+  - **Environment Configuration**: Added Gemini API key configuration
+    - `GEMINI_API_KEY` environment variable for Gemini API access
+    - Placeholder configuration in `.env` file
+    - Optional proxy configuration for OpenAI bypass
+  - **Service Communication**: Enhanced inter-service authentication
+    - Proper `X-Internal-Token` header handling in all ML service requests
+    - Correct `multipart/form-data` Content-Type management
+    - Improved error handling and logging
+
+### Security
+- **API Token Validation**: Enhanced inter-service authentication security
+  - Proper token validation in ML service endpoints
+  - Secure header handling for multipart requests
+  - Comprehensive error logging for security monitoring
+
 ## [0.3.61] - 2025-07-20
 
 ### Fixed
