--- a/changelogs/v0.3.x.md
+++ b/changelogs/v0.3.x.md
@@ -1,5 +1,118 @@
 # Changelog - Version 0.3.x
 
+## [0.3.67] - 2025-07-27
+
+### Fixed
+- **Payment System Configuration**: Restored original payment plan pricing
+  - **Production Pricing**: Restored original production prices for payment plans
+    - Basic Plan: restored to 99 RUB (9900 kopecks)
+    - Pro Plan: restored to 349 RUB (34900 kopecks)
+  - **Environment Configuration**: Set ENVIRONMENT=production for correct pricing
+    - Ensures production pricing is used instead of development/test pricing
+    - Disabled TEST_MODE to use standard payment processing
+  - **Payment Flow**: Confirmed payment system is working correctly
+    - Pre-checkout validation working properly
+    - Successful payment processing confirmed
+    - Credit allocation and payment records working
+
+### Changed
+- **Payment Configuration**: Updated environment settings for production pricing
+  - Set ENVIRONMENT=production in .env file
+  - Disabled TEST_MODE for standard payment processing
+  - Restored original payment plan pricing structure
+
+## [0.3.66] - 2025-07-27
+
+### Added
+- **Payment Debug Logging**: Enhanced logging for payment processing debugging
+  - **Pre-checkout Logging**: Added detailed logging for pre-checkout query handling
+    - Logs user ID, payload, amount, and currency information
+    - Helps diagnose payment validation issues
+  - **Successful Payment Logging**: Added comprehensive logging for successful payment processing
+    - Logs payment data, user information, and processing steps
+    - Tracks credit allocation and payment record creation
+  - **Debug Message Handler**: Added universal debug handler for all incoming messages
+    - Logs all incoming Telegram messages for troubleshooting
+    - Helps identify message routing and processing issues
+  - **Payment Flow Tracking**: Enhanced tracking of payment processing flow
+    - Better visibility into payment validation and processing steps
+    - Improved error diagnosis for payment-related issues
+
+### Changed
+- **Payment System Monitoring**: Improved monitoring and debugging capabilities
+  - Enhanced logging for payment processing steps
+  - Better error tracking and diagnosis
+  - Improved visibility into payment flow issues
+
+## [0.3.65] - 2025-07-27
+
+### Fixed
+- **Telegram Payment Provider Error**: Resolved "PAYMENT_PROVIDER_INVALID" error in payment system
+  - **Provider Token**: Restored original YooKassa provider token for Telegram payments
+    - Reverted to working YooKassa token: `381764678:TEST:131920`
+    - Ensures compatibility with Telegram's payment system
+  - **Payment Amounts**: Increased minimum payment amounts for Telegram test payments
+    - Basic Plan: increased from 10 RUB to 100 RUB (10000 kopecks)
+    - Pro Plan: increased from 50 RUB to 500 RUB (50000 kopecks)
+    - Meets Telegram's minimum amount requirements for test payments
+  - **Test Mode Configuration**: Maintained TEST_MODE=true for proper test payment handling
+    - Ensures correct payment validation and processing
+    - Enables proper error handling for development environment
+
+### Changed
+- **Payment Plan Pricing**: Updated test mode pricing to meet Telegram requirements
+  - Increased minimum amounts to comply with Telegram API limits
+  - Maintained production pricing for live environment
+  - Improved payment validation for different environments
+
+## [0.3.64] - 2025-07-27
+
+### Fixed
+- **Telegram Payment Creation Error**: Resolved "CURRENCY_TOTAL_AMOUNT_INVALID" error in payment system
+  - **Test Mode Configuration**: Added TEST_MODE=true environment variable for Telegram test payments
+    - Enables proper test payment configuration for development environment
+    - Ensures minimum payment amounts are correctly set for Telegram API
+  - **Telegram Provider Token**: Updated YooKassa provider token for test payments
+    - Changed from production token to Telegram test token: `284685063:TEST:YjQ5YjQ5YjQ5YjQ5YjQ5`
+    - Ensures compatibility with Telegram's test payment system
+  - **Payment Validation**: Fixed payment amount validation for Telegram API requirements
+    - Telegram requires specific minimum amounts for different currencies
+    - Test mode ensures proper payment amounts for development testing
+  - **Error Handling**: Improved error handling for payment creation failures
+    - Better error messages for payment validation issues
+    - Proper fallback handling when payment creation fails
+
+### Changed
+- **Environment Configuration**: Enhanced payment system configuration for development
+  - Added TEST_MODE environment variable for Telegram test payments
+  - Updated provider token configuration for test environment
+  - Improved payment plan validation for different environments
+
+## [0.3.63] - 2025-07-27
+
+### Fixed
+- **Pay Service Health Check Issue**: Resolved circular dependency problem in health checks
+  - **Circular Dependency**: Fixed infinite health check loop between API and Pay services
+    - Pay service was checking API service health, while API service was checking Pay service health
+    - This created a circular dependency causing both services to show "unhealthy" status
+  - **Docker Network Configuration**: Fixed API_SERVICE_URL configuration for Docker networking
+    - Changed from `http://localhost:8000` to `http://api:8000` in `.env` file
+    - Ensured proper inter-service communication within Docker network
+  - **Health Check Architecture**: Improved health check design to avoid circular dependencies
+    - Removed API service health check from Pay service health endpoint
+    - Pay service now only checks database connectivity and internal dependencies
+    - API service continues to check Pay service health (one-way dependency)
+  - **Service Communication**: Restored proper inter-service communication
+    - All services now show "healthy" status
+    - No more connection timeout errors in logs
+    - Proper Docker network routing between services
+
+### Changed
+- **Health Check Logic**: Simplified Pay service health check to prevent circular dependencies
+  - Pay service health check now focuses on internal dependencies only
+  - Database connectivity and payment provider configuration checks remain
+  - API service configuration is reported but not actively checked
+
 ## [0.3.62] - 2025-07-27
 
 ### Fixed
