--- a/changelogs/v0.3.x.md
+++ b/changelogs/v0.3.x.md
@@ -1,5 +1,24 @@
 # Changelog - Version 0.3.x
 
+## [0.3.68] - 2025-07-27
+
+### Fixed
+- **GitHub Actions Deployment**: Fixed production deployment issues on main branch
+  - **Requirements Path**: Fixed incorrect requirements.txt path in GitHub Actions workflow
+    - Changed from `api.c0r.ai/app/requirements.txt` to correct service-specific paths
+    - Updated workflow to install all service dependencies: main, api/bot, ml, pay, and test requirements
+  - **Test Script Paths**: Fixed outdated file paths in deployment test script
+    - Updated Python syntax check paths from old `api.c0r.ai/app/` structure to new `services/` structure
+    - Fixed critical file existence checks to use correct service paths
+  - **Import Issues**: Fixed circular import and module path issues in test files
+    - Fixed circular import in `services/api/bot/handlers/nutrition.py` by using module-level import
+    - Updated all test imports from `handlers.commands` to `services.api.bot.handlers.commands`
+    - Fixed patch references in unit and integration tests to use correct module paths
+  - **Test Dependencies**: Ensured all test dependencies are properly installed
+    - Verified requirements installation works in virtual environment
+    - Confirmed all service imports work correctly
+    - Validated test suite runs successfully with updated paths
+
 ## [0.3.67] - 2025-07-27
 
 ### Fixed
