docs: update changelog for payment plans fix v0.3.69

--- a/changelogs/v0.3.x.md
+++ b/changelogs/v0.3.x.md
@@ -1,5 +1,27 @@
 # Changelog - Version 0.3.x
 
+## [0.3.69] - 2025-07-27
+
+### Fixed
+- **Payment Plans Configuration**: Fixed incorrect pricing that caused CURRENCY_TOTAL_AMOUNT_INVALID errors
+  - **Development Environment**: Updated development environment to use production pricing (99₽ and 349₽)
+    - Changed from test prices (10₽ and 50₽) to production prices (99₽ and 349₽)
+    - Ensures consistent pricing across all environments
+    - Fixes Telegram payment validation errors
+  - **Default Configuration**: Set default pricing to production values
+    - Changed default fallback from development to production pricing
+    - Prevents incorrect pricing when environment is not explicitly set
+  - **Enhanced Logging**: Added detailed logging for payment plan configuration
+    - Logs environment, test mode, and payment plan details
+    - Helps debug payment configuration issues
+    - Shows actual prices being used for each plan
+
+### Changed
+- **Payment Configuration**: Improved payment plan loading and validation
+  - Better error handling for payment plan configuration
+  - Enhanced debugging capabilities for payment issues
+  - Consistent pricing across all environments
+
 ## [0.3.68] - 2025-07-27
 
 ### Fixed
