feat: Release v0.4.1 - Multi-LLM Provider Support & Advanced Food Recognition
🚀 MAJOR IMPROVEMENTS:
- Added Perplexity API integration with sonar/sonar-pro models
- Implemented LLM provider selection via LLM_PROVIDER env var
- Fixed egg vs mozzarella misidentification with aggressive prompts
- Enhanced text formatting to prevent character corruption
- Added provider info to analysis output for transparency

🔧 TECHNICAL IMPROVEMENTS:
- Optimized Perplexity configuration (temp=0.2, top_p=0.3)
- Enhanced prompt engineering with critical recognition rules
- Improved JSON parsing and response handling
- Added step-by-step verification for food identification

🐛 BUG FIXES:
- Fixed persistent mozzarella misidentification of boiled eggs
- Resolved 'Analyzed Dish' generic responses
- Corrected text formatting issues in analysis messages
- Fixed character-by-character display in suggestions

📊 PERFORMANCE:
- Optimized Perplexity parameters for maximum accuracy
- Improved response processing with better JSON extraction
- Enhanced error recovery with fallback mechanisms

🎯 USER EXPERIENCE:
- More precise food identification with specific rules
- Better egg vs mozzarella distinction using visual characteristics
- Cleaner text formatting without corruption
- Provider transparency showing which LLM was used

--- a/changelogs/v0.4.x.md
+++ b/changelogs/v0.4.x.md
@@ -1,5 +1,104 @@
 # Changelog v0.4.x
 
+## [0.4.1] - 2025-08-05
+
+### 🚀 **MAJOR IMPROVEMENTS**
+
+#### **Multi-LLM Provider Support**
+- **Added Perplexity API integration** with `sonar` and `sonar-pro` models
+- **Implemented LLM provider selection** via environment variable (`LLM_PROVIDER`)
+- **Added Perplexity client** with optimized parameters for maximum accuracy
+- **Enhanced provider factory** with support for OpenAI, Perplexity, and Gemini
+- **Added provider info to analysis output** for debugging and transparency
+
+#### **Advanced Food Recognition**
+- **Fixed egg vs mozzarella misidentification** with aggressive prompt engineering
+- **Added critical recognition rules** with specific size and texture guidelines
+- **Implemented step-by-step verification** for distinguishing similar foods
+- **Enhanced prompt instructions** with visual characteristics and size specifications
+
+#### **Text Formatting Improvements**
+- **Fixed text corruption issues** in positive_aspects and improvement_suggestions
+- **Added flexible format handling** for both string and list responses
+- **Improved message formatting** to prevent character-by-character display
+- **Enhanced error handling** for malformed JSON responses
+
+### 🔧 **TECHNICAL IMPROVEMENTS**
+
+#### **Perplexity Integration**
+```python
+# Optimized Perplexity configuration
+PERPLEXITY_CONFIG = {
+    "model": "sonar-pro",
+    "temperature": 0.2,
+    "top_p": 0.3,
+    "presence_penalty": 0.1,
+    "max_tokens": 1000,
+    "search_domain_filter": ["wikipedia.org", "seriouseats.com", "bonappetit.com"],
+    "response_format": {"type": "json_object"}
+}
+```
+
+#### **Enhanced Prompt Engineering**
+- **Aggressive egg vs mozzarella distinction** with critical warnings
+- **Specific size guidelines**: eggs ~5-7 cm, mozzarella ~1-2 cm
+- **Visual characteristic descriptions** with texture and color details
+- **Step-by-step verification process** for accurate identification
+
+#### **Response Processing**
+- **Improved JSON parsing** with better error handling
+- **Enhanced format validation** for Perplexity responses
+- **Fixed streaming response handling** to prevent text corruption
+- **Added provider metadata** to analysis results
+
+### 🐛 **BUG FIXES**
+
+#### **Food Recognition**
+- **Fixed persistent mozzarella misidentification** of boiled eggs
+- **Resolved "Analyzed Dish" generic responses** with specific dish naming
+- **Corrected text formatting issues** in analysis messages
+- **Fixed character-by-character display** in positive aspects and suggestions
+
+#### **API Integration**
+- **Resolved Perplexity API fallback issues** to OpenAI
+- **Fixed response format handling** for streaming responses
+- **Corrected JSON parsing** for mixed content responses
+- **Enhanced error handling** for malformed responses
+
+### 📊 **PERFORMANCE IMPROVEMENTS**
+
+#### **ML Service**
+- **Optimized Perplexity parameters** for maximum accuracy
+- **Improved response processing** with better JSON extraction
+- **Enhanced error recovery** with fallback mechanisms
+- **Better logging** for debugging provider issues
+
+#### **Text Processing**
+- **Faster message formatting** with optimized string handling
+- **Reduced text corruption** with improved response parsing
+- **Better memory usage** with efficient JSON processing
+
+### 🎯 **USER EXPERIENCE IMPROVEMENTS**
+
+#### **Analysis Accuracy**
+- **More precise food identification** with specific recognition rules
+- **Better egg vs mozzarella distinction** using visual characteristics
+- **Improved dish naming** with specific rather than generic descriptions
+- **Enhanced nutritional analysis** with detailed health benefits
+
+#### **Message Quality**
+- **Cleaner text formatting** without character corruption
+- **Better readability** with proper string handling
+- **Provider transparency** showing which LLM was used
+- **Consistent formatting** across different response types
+
+### 🔄 **MIGRATION NOTES**
+
+- **New environment variable**: `LLM_PROVIDER` for selecting AI provider
+- **Updated prompt structure** with critical recognition rules
+- **Enhanced response format** with provider metadata
+- **Improved error handling** for better reliability
+
 ## [0.4.0] - 2025-08-04
 
 ### 🚀 **MAJOR IMPROVEMENTS**
