Updated changelog; disabled failed workflow for flutter

--- a/changelogs/v0.4.x.md
+++ b/changelogs/v0.4.x.md
@@ -1,5 +1,35 @@
 # Changelog v0.4.x
 
+## [0.4.2] - 2025-08-10
+
+### Added
+- Product label scan via Perplexity (vision) with personalized recommendations based on user profile (diet, allergies, goal, daily target).
+- Rich result rendering in bot for label scan and dish analysis; localized RU/EN sections and smarter tips.
+- "I ate this" flow: informative confirmation with KBZhU delta and updated daily total, plus quick navigation buttons.
+- CIS payment routing using Telegram language_code (and country when available); YooKassa for CIS, Stripe + Stars for non‑CIS.
+
+### Changed
+- Primary scan focus moved from barcode to full package/label (barcode optional). Updated user-facing prompts accordingly.
+- Prices and naming: Basic package 99₽ (20 credits), PRO package 349₽ (100 credits). UI renamed from “plans” to “packages”.
+- Favorites list UX: per-item messages with concise KBZhU, “Add to my day” and “Delete” actions.
+- Improved translations across RU/EN; localized motivation lines and prompts.
+
+### Removed
+- OpenFoodFacts provider and related button/handler in the bot.
+
+### Fixed
+- Bot DNS resolution inside containers; added explicit DNS in docker‑compose.
+- Callback routing order so specific handlers (ate_this, scan, fix_calories) are not swallowed by generic action handler.
+- Timeouts for ML calls; raised API timeout for Perplexity scans and graceful retry UI.
+- Daily calories correction flow: correct delta/new total messaging; added RU prompt.
+
+### Migrations
+- 2025-08-08: features_favorites_plans_recipes.sql (favorites, corrections, meal plans, saved recipes, indexes).
+- 2025-08-10: user_profiles_avatar_fullname.sql (avatar_url, full_name, index).
+- 2025-08-05: daily_calories_table.sql (idempotent RLS/policies/triggers).
+
+---
+
 ## [0.4.1] - 2025-08-05
 
 ### 🚀 **MAJOR IMPROVEMENTS**
